# vim: set noexpandtab:

2013-11-11 Davide
	* Changed several SusyNtTools functions to be static (this allows
	to reduce the code duplication downstream in classes inheriting
	from SusyNtTools)

2013-11-11 Steve
	* Removed obsolete btag codes for p1181

2013-11-07 Steve
	* Updated BTag calibrations to match SUSYTools-00-03-06

2013-11-07 Steve
	* Tagging SusyNtuple-00-01-05

2013-10-04 Davide
	* Add etcone20 to Lepton

2013-09-25 Davide
	* Add special signal lepton definition for 2LepWH

2013-08-19 Davide
	* Add secondary vtx mass to Jet

2013-08-16 Davide
	* Add emfrac to Jet
	* Add mc truth particles for ttbar (implemented in WhTruthExtractor::ttbarMcAtNloParticles)

2013-07-30 Steve
	* Added jetPtCut arg to Meff methods

2013-07-27 Anyes
	* Update hasZllZll method to return lep idx making Z's

2013-07-12 Steve
	* Added hasZllZll method to SusyNtTools

2013-7-22 Serhan Mete <amete@cern.ch>
	* SusyNtTools.[cxx,h]: SusyNtTools::buildSumwMap now handles Simplified Model

2013-07-22 Anyes
	* Added mEff w/o leptons
	* Few tweaks to TGuiUtils

2013-07-12 Steve
	* Added hasZlll and hasZllll methods to SusyNtTools

2013-07-07 Steve
	* Added shifted pileup weights for pileup systematic
	* Tagging SusyNtuple-00-01-04

2013-07-06 Matt
	* Added met weights for the jets x,y components.

2013-07-05 Matt
	* Changed how bTagSF is called, see header.
	* Added configure method for bTagSF tool
	* Updated initialization of DilTrigTool to be compatibile with latest DGTrigger package

2013-07-02 Matt
	* Adding sumet to all met terms except refCell and softJet since these are no longer used.
	* Fixed missing copy constructor for softTerm in SusyNt.cxx

2013-06-26 Steve
	* Addd isSemiSignalElectron and isSemiSignalMuon from Tina
	* Updated 3L isolation corrections to only subtract semi-signal leptons
	* Tagging SusyNtuple-00-01-03

2013-06-26 Steve
	* Added event trigger cut to TrilTrigLogic
	* Added getHT and getThrT methods to SusyNtTools